added responsive design

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
           <button type="submit" class="btn btn-primary">Send</button>
         </form>
         <div class="social-links">
-          <!-- <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a> -->
+          <a href="https://www.linkedin.com/in/harshith-m-4409b831a/" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/Harshith014" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
