--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                       </div>
                       <div class="project-links">
                         <a
-                          href="https://food-order-ovjj.onrender.com/"
+                          href="https://food-order-five-amber.vercel.app/"
                           class="btn btn-primary mr-2"
                           target="_blank"
                           >Live Demo</a
@@ -291,7 +291,7 @@
                       </div>
                       <div class="project-links">
                         <a
-                          href="https://chat-app-mkfi.onrender.com/"
+                          href="https://chat-app-theta-lyart-86.vercel.app/"
                           class="btn btn-primary mr-2"
                           target="_blank"
                           >Live Demo</a
