--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
               class="active"
             ></li>
             <li data-target="#projectCarousel" data-slide-to="1"></li>
+            <li data-target="#projectCarousel" data-slide-to="2"></li>
+            <li data-target="#projectCarousel" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
